The first commit for the workshopss

--- a/workshop-fetch/public/index.html
+++ b/workshop-fetch/public/index.html
@@ -18,8 +18,9 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="%PUBLIC_URL%/_dist_/index.css"
-    />
+      href="../src/index.css"
+      />
+      <!-- href="%PUBLIC_URL%/_dist_/index.css" -->
     <title>Workshop 1: Fetch | Curso Manipulación DOM | Platzi</title>
   </head>
   <body>
@@ -53,6 +54,6 @@
     </footer>
 
     <!-- Add more scripts here -->
-    <script type="module" src="%PUBLIC_URL%/_dist_/index.js"></script>
+    <script type="module" src="../src/index.js"></script>
   </body>
 </html>
